[gd_scene load_steps=2 format=3 uid="uid://b2uqsbphdff7u"]

[ext_resource type="Script" uid="uid://btqc0xk8mijuo" path="res://utilities/off_screen_timeout/off_screen_timout.gd" id="1_lf6oc"]

[node name="OffScreenTimer" type="Node2D"]
script = ExtResource("1_lf6oc")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="on_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="on_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="on_timer_timeout"]
